tests/bad/17_missing_body.src
# Test: Missing function body
void main([string] args);  # Missing function body
